--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^3.4.4"
   },
   "dependencies": {
-    "probot": "^9.2.7"
+    "probot": "^9.2.7",
+    "smee-client": "^1.1.0"
   }
 }
