Added editable title and body for status in GitHub

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 APP_ID=
 WEBHOOK_SECRET=
 WEBHOOK_PROXY_URL=
-PRIVATE_KEY_PATH=
+PRIVATE_KEY=""
+GITHUB_STATUS_TITLE="Is tested?"
+GITHUB_STATUS_BODY_SUCCESS="This pull request has been tested in-game."
+GITHUB_STATUS_BODY_FAILURE="This pull request hasn't been tested in-game."
 LABEL=testing/tested
