Added not working label and fixed on new commit, fixed #2 and fixed #3

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ WEBHOOK_PROXY_URL=
 PRIVATE_KEY=""
 GITHUB_STATUS_TITLE="Is tested?"
 GITHUB_STATUS_BODY_SUCCESS="This pull request has been tested in-game."
+GITHUB_STATUS_BODY_NOT_WORKING="This pull request has been tested in-game but is not working as desired."
 GITHUB_STATUS_BODY_FAILURE="This pull request hasn't been tested in-game."
 LABEL=testing/tested
+LABEL_NOT_WORKING="testing/not working"
